# 5FX-SynthFX

./: CMakeLists.txt  Readme.md
src/: SynthFX.cpp
